[gd_scene load_steps=11 format=2]

[ext_resource path="res://art/I-pixel-u.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://images & fonts/I-pixel-u.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://art/image (2).png" type="Texture" id=3]
[ext_resource path="res://scripts/main menu.gd" type="Script" id=4]
[ext_resource path="res://sons/SOM UTERO.wav" type="AudioStream" id=5]
[ext_resource path="res://sons/click_2.wav" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 54
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 1 )

[node name="main menu" type="Control"]
margin_right = 1028.0
margin_bottom = 600.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="menu backgrownd" type="Sprite" parent="."]
position = Vector2( 511, 299 )
scale = Vector2( 1.40797, 1.46098 )
texture = ExtResource( 3 )

[node name="cells journey" type="Label" parent="."]
margin_left = 263.0
margin_top = 44.0
margin_right = 822.0
margin_bottom = 149.0
custom_fonts/font = SubResource( 1 )
text = "CELL'S  JOURNEY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="credits" type="Button" parent="."]
margin_left = -53.0
margin_top = 554.0
margin_right = 227.0
margin_bottom = 613.0
custom_colors/font_color = Color( 0.0627451, 0.0431373, 0.0431373, 1 )
custom_fonts/font = SubResource( 4 )
text = "SAIBA MAIS"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_bottom = 0.019
margin_left = 379.0
margin_top = 361.0
margin_right = 647.0
margin_bottom = 461.6
rect_scale = Vector2( 1, 2 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play" type="Button" parent="VBoxContainer"]
margin_top = 10.0
margin_right = 268.0
margin_bottom = 54.0
custom_colors/font_color = Color( 0.14902, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "P L A Y"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="Button" parent="VBoxContainer"]
margin_top = 58.0
margin_right = 268.0
margin_bottom = 102.0
custom_colors/font_color = Color( 0.160784, 0.00784314, 0.00784314, 1 )
custom_fonts/font = SubResource( 3 )
text = "Q U I T"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="somClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="somMenu" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="pressed" from="credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_pressed"]
